--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -1,107 +1,107 @@
-# nginx.conf
+# # nginx.conf
 
-server {
-    listen 80;
-    server_name localhost;
-
-    # Redirect HTTP to HTTPS
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name localhost;
-
-    # SSL Configuration
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-    ssl_certificate /etc/nginx/ssl/localhost.crt;
-    ssl_certificate_key /etc/nginx/ssl/localhost.key;
-
-    # Other SSL configurations (optional)
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
-
-    # Root directory and proxy configurations (as previously configured)
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-
-    location / {
-        proxy_pass http://web:8200;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Proxying API requests to the PostgreSQL container
-    location /api {
-        proxy_pass http://db:5432;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Error handling and other configurations (as previously configured)
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-}
-
-# -------------------------------------------------------------------------------------------------------------------
-
-# # HTTP server
 # server {
 #     listen 80;
 #     server_name localhost;
 
-#     # Root directory for static files (adjust path as needed)
-#     root /usr/share/nginx/html;
-#     index index.html;
+#     # Redirect HTTP to HTTPS
+#     return 301 https://$host$request_uri;
+# }
 
-#     # Proxying requests to the application container
+# server {
+#     listen 443 ssl;
+#     server_name localhost;
+
+#     # SSL Configuration
+#     ssl_certificate /etc/nginx/ssl/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+#     ssl_certificate /etc/nginx/ssl/localhost.crt;
+#     ssl_certificate_key /etc/nginx/ssl/localhost.key;
+
+#     # Other SSL configurations (optional)
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers on;
+#     ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+
+#     # Root directory and proxy configurations (as previously configured)
+#     root /usr/share/nginx/html;
+#     index index.html index.htm;
+
 #     location / {
 #         proxy_pass http://web:8200;
-# #       proxy_pass http://invoice-generator-container:8100;   # for docker container (optional)
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #         proxy_set_header X-Forwarded-Proto $scheme;
-
-#         # Include necessary proxy settings if needed
-#         # proxy_redirect off;
-#         # proxy_buffering off;
-#         # proxy_set_header Upgrade $http_upgrade;
-#         # proxy_set_header Connection "upgrade";
 #     }
 
 #     # Proxying API requests to the PostgreSQL container
 #     location /api {
 #         proxy_pass http://db:5432;
-# #       proxy_pass http://invoice-generator-postgres-container:5432;  # for docker container (optional)
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #         proxy_set_header X-Forwarded-Proto $scheme;
 #     }
 
-#     # Error handling for the server block
+#     # Error handling and other configurations (as previously configured)
 #     error_page 500 502 503 504 /50x.html;
 #     location = /50x.html {
 #         root /usr/share/nginx/html;
 #     }
-
-#     # Default server block to handle undefined server names
-#     # Remove if not needed or adjust as necessary
-#     # server {
-#     #     listen 80 default_server;
-#     #     server_name _;
-
-#     #     return 404;
-#     # }
 # }
+
+# -------------------------------------------------------------------------------------------------------------------
+
+# # HTTP server
+server {
+    listen 80 default_server;
+    server_name localhost;
+
+    # Root directory for static files (adjust path as needed)
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Proxying requests to the application container
+    location / {
+        proxy_pass http://web:8200;
+#       proxy_pass http://invoice-generator-container:8100;   # for docker container (optional)
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Include necessary proxy settings if needed
+        # proxy_redirect off;
+        # proxy_buffering off;
+        # proxy_set_header Upgrade $http_upgrade;
+        # proxy_set_header Connection "upgrade";
+    }
+
+    # Proxying API requests to the PostgreSQL container
+    location /api {
+        proxy_pass http://db:5432;
+#       proxy_pass http://invoice-generator-postgres-container:5432;  # for docker container (optional)
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Error handling for the server block
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
+    # Default server block to handle undefined server names
+    # Remove if not needed or adjust as necessary
+    # server {
+    #     listen 80 default_server;
+    #     server_name _;
+
+    #     return 404;
+    # }
+}
 
 
